Fix for issue: WMS-13553, Setting width for smoothscroll-container as  the width was not honored by absolute element.  WMS-13554, (Reverting commit) Setting overflow hidden for leftPanel as horizontal scroll is observed with slide-in.  WMS-13555, Included thresholdAngle in swipe plugin, which checks if  angle is more than 20, consider the swipe as scroll.

--- a/src/main/webapp/scripts/modules/layouts/styles/less/layouts.less
+++ b/src/main/webapp/scripts/modules/layouts/styles/less/layouts.less
@@ -429,6 +429,12 @@ body {
 .wm-app {
   height: 100%;
   position: relative;
+  // Required for left panel swipe transition
+  &.wm-mobile-app {
+    #wm-app-content {
+      overflow: hidden;
+    }
+  }
   #wm-app-content , .app-page, .app-partial, .app-included-page {
     .width-height();
     position: relative;
@@ -1643,6 +1649,7 @@ body {
   }
   .smoothscroll-container {
     position: absolute;
+    width: 100%;
   }
 
   //Angular UI bootstrap 1.1.0 related styles.
